sfSandBoxCode/force-app/main/default/objects/Electronic_Payment_Request__c/Electronic_Payment_Request__c.object-meta.xml
<CustomObject>
    <label>Electronic Payment Request</label>
    <nameField>
        <displayFormat>EPR-{0000}</displayFormat>
        <label>Electronic Payment Request name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Electronic Payment Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>