sfSandBoxCode/force-app/main/default/objects/Electronic_Payment_Request__c/fields/Appropriate_Documentation_Received__c.field-meta.xml
<CustomField>
    <fullName>Appropriate_Documentation_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Appropriate Documentation Received</label>
    <type>Checkbox</type>
</CustomField>