sfSandBoxCode/force-app/main/default/objects/Electronic_Payment_Request__c/fields/Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Approval_Date__c</fullName>
    <description>TL Approval Date</description>
    <inlineHelpText>TL Approval Date</inlineHelpText>
    <label>Approval Date</label>
    <type>DateTime</type>
</CustomField>