sfSandBoxCode/force-app/main/default/objects/Electronic_Payment_Request__c/fields/Approval_to_Payment_Days__c.field-meta.xml
<CustomField>
    <fullName>Approval_to_Payment_Days__c</fullName>
    <formula>Payment_Date__c -  DATEVALUE(Approval_Date__c)</formula>
    <label>Approval to Payment Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>