sfSandBoxCode/force-app/main/default/objects/Electronic_Payment_Request__c/fields/Approving_Finance_Officer__c.field-meta.xml
<CustomField>
    <fullName>Approving_Finance_Officer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approving Finance Officer</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Electronic Payment Requests (Approving Finance Officer)</relationshipLabel>
    <relationshipName>Electronic_Payment_Requests2</relationshipName>
    <type>Lookup</type>
</CustomField>