sfSandBoxCode/force-app/main/default/objects/Electronic_Payment_Request__c/fields/Approving_Team_Lead__c.field-meta.xml
<CustomField>
    <fullName>Approving_Team_Lead__c</fullName>
    <label>Approving Team Lead</label>
    <length>255</length>
    <type>Text</type>
</CustomField>