sfSandBoxCode/force-app/main/default/objects/Electronic_Payment_Request__c/fields/Approving_Team_Lead_Display__c.field-meta.xml
<CustomField>
    <fullName>Approving_Team_Lead_Display__c</fullName>
    <formula>Approving_Team_Lead__c</formula>
    <label>Approving Team Lead</label>
    <type>Text</type>
</CustomField>