sfSandBoxCode/force-app/main/default/objects/Electronic_Payment_Request__c/fields/Approving_Teamlead__c.field-meta.xml
<CustomField>
    <fullName>Approving_Teamlead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approving Teamlead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Electronic_Payment_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>