sfSandBoxCode/force-app/main/default/objects/Electronic_Payment_Request__c/fields/attachment_count__c.field-meta.xml
<CustomField>
    <fullName>attachment_count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>attachment count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>