sfSandBoxCode/force-app/main/default/objects/Electronic_Payment_Request__c/fields/Cash_Entry__c.field-meta.xml
<CustomField>
    <fullName>Cash_Entry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cash Entry</label>
    <referenceTo>c2g__codaCashEntry__c</referenceTo>
    <relationshipLabel>Electronic Payment Requests</relationshipLabel>
    <relationshipName>Electronic_Payment_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>