sfSandBoxCode/force-app/main/default/objects/Electronic_Payment_Request__c/fields/CompanyName__c.field-meta.xml
<CustomField>
    <fullName>CompanyName__c</fullName>
    <formula>RespectiveCompany__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CompanyName</label>
    <type>Text</type>
</CustomField>