sfSandBoxCode/force-app/main/default/objects/Electronic_Payment_Request__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <description>The name of the person at vendor to be paid</description>
    <label>Contact Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>