sfSandBoxCode/force-app/main/default/objects/Electronic_Payment_Request__c/fields/Count_of_line_items__c.field-meta.xml
<CustomField>
    <fullName>Count_of_line_items__c</fullName>
    <label>Count of line items</label>
    <summaryForeignKey>EPR_Payable_Item__c.EPR__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>