sfSandBoxCode/force-app/main/default/objects/Electronic_Payment_Request__c/fields/Create_PIN__c.field-meta.xml
<CustomField>
    <fullName>Create_PIN__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Create A Payable Invoice</description>
    <label>Create PIN</label>
    <type>Checkbox</type>
</CustomField>