sfSandBoxCode/force-app/main/default/objects/Electronic_Payment_Request__c/fields/department__c.field-meta.xml
<CustomField>
    <fullName>department__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Requesting Department</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>FFA_Config_Object__c.Type__c</field>
            <operation>equals</operation>
            <value>dim1</value>
        </filterItems>
        <filterItems>
            <field>FFA_Config_Object__c.Name</field>
            <operation>notContain</operation>
            <value>XX</value>
        </filterItems>
        <filterItems>
            <field>FFA_Config_Object__c.Name</field>
            <operation>notContain</operation>
            <value>xx</value>
        </filterItems>
        <filterItems>
            <field>FFA_Config_Object__c.isActive__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>FFA_Config_Object__c</referenceTo>
    <relationshipLabel>Electronic Payment Requests</relationshipLabel>
    <relationshipName>Electronic_Payment_Requests</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>