sfSandBoxCode/force-app/main/default/objects/Electronic_Payment_Request__c/fields/EPR_Received__c.field-meta.xml
<CustomField>
    <fullName>EPR_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EPR Received</label>
    <type>Checkbox</type>
</CustomField>