sfSandBoxCode/force-app/main/default/objects/Electronic_Payment_Request__c/fields/EPR_Request_Type__c.field-meta.xml
<CustomField>
    <fullName>EPR_Request_Type__c</fullName>
    <formula>TEXT(EPR_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EPR Request Type</label>
    <type>Text</type>
</CustomField>