sfSandBoxCode/force-app/main/default/objects/Electronic_Payment_Request__c/fields/EPR_Type__c.field-meta.xml
<CustomField>
    <fullName>EPR_Type__c</fullName>
    <label>EPR Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Procurement</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
                <default>true</default>
                <label>Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>