sfSandBoxCode/force-app/main/default/objects/Electronic_Payment_Request__c/fields/Expected_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Payment_Date__c</fullName>
    <label>Expected Payment Date</label>
    <type>Date</type>
</CustomField>