sfSandBoxCode/force-app/main/default/objects/Electronic_Payment_Request__c/fields/Gross_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Gross_Payment_Amount__c</fullName>
    <label>Gross Payment Amount</label>
    <summarizedField>EPR_Payable_Item__c.Gross_price__c</summarizedField>
    <summaryForeignKey>EPR_Payable_Item__c.EPR__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>