sfSandBoxCode/force-app/main/default/objects/Electronic_Payment_Request__c/fields/Helpdesk_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Helpdesk_Ticket__c</fullName>
    <label>Helpdesk Ticket</label>
    <type>Url</type>
</CustomField>