sfSandBoxCode/force-app/main/default/objects/Electronic_Payment_Request__c/fields/Include_Withdrawal_Fees__c.field-meta.xml
<CustomField>
    <fullName>Include_Withdrawal_Fees__c</fullName>
    <label>Include Withdrawal Fees</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>