sfSandBoxCode/force-app/main/default/objects/Electronic_Payment_Request__c/fields/Journal__c.field-meta.xml
<CustomField>
    <fullName>Journal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Journal</label>
    <referenceTo>c2g__codaJournal__c</referenceTo>
    <relationshipLabel>Electronic Payment Requests</relationshipLabel>
    <relationshipName>Electronic_Payment_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>