sfSandBoxCode/force-app/main/default/objects/Electronic_Payment_Request__c/fields/MPESA_or_Cheque__c.field-meta.xml
<CustomField>
    <fullName>MPESA_or_Cheque__c</fullName>
    <label>MPESA or Cheque?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MPESA</fullName>
            </value>
            <value>
                <fullName>CHEQUE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>