sfSandBoxCode/force-app/main/default/objects/Electronic_Payment_Request__c/fields/MPESA_payment_number__c.field-meta.xml
<CustomField>
    <fullName>MPESA_payment_number__c</fullName>
    <formula>TEXT(Vendor_Company__r.Mobile_Payment_Phone_Number__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MPESA payment number</label>
    <type>Text</type>
</CustomField>