sfSandBoxCode/force-app/main/default/objects/Electronic_Payment_Request__c/fields/Payable_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Payable_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PIN</label>
    <referenceTo>c2g__codaPurchaseInvoice__c</referenceTo>
    <relationshipLabel>Electronic Payment Requests</relationshipLabel>
    <relationshipName>Electronic_Payment_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>