sfSandBoxCode/force-app/main/default/objects/Electronic_Payment_Request__c/fields/Payment_Currency__c.field-meta.xml
<CustomField>
    <fullName>Payment_Currency__c</fullName>
    <formula>TEXT( CurrencyIsoCode )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Currency</label>
    <type>Text</type>
</CustomField>