sfSandBoxCode/force-app/main/default/objects/Electronic_Payment_Request__c/fields/Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Payment_Type__c</fullName>
    <label>Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Prepayment</fullName>
            </value>
            <value>
                <fullName>Cash Advance</fullName>
            </value>
            <value>
                <fullName>Employee Reimbursement</fullName>
            </value>
            <value>
                <fullName>Payment on Invoice</fullName>
            </value>
            <value>
                <fullName>Special Procurement</fullName>
            </value>
            <value>
                <fullName>FLO Reimbursement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>