sfSandBoxCode/force-app/main/default/objects/Electronic_Payment_Request__c/fields/Pin_Created__c.field-meta.xml
<CustomField>
    <fullName>Pin_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to prevent double creation of PINS</description>
    <label>Pin Created</label>
    <type>Checkbox</type>
</CustomField>