sfSandBoxCode/force-app/main/default/objects/Electronic_Payment_Request__c/fields/PO_Number__c.field-meta.xml
<CustomField>
    <fullName>PO_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PO Number</label>
    <referenceTo>rstk__pohdr__c</referenceTo>
    <relationshipLabel>Electronic Payment Requests</relationshipLabel>
    <relationshipName>Electronic_Payment_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>