sfSandBoxCode/force-app/main/default/objects/Electronic_Payment_Request__c/fields/Preferred_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Payment_Method__c</fullName>
    <label>Preferred Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Check</fullName>
            </value>
            <value>
                <fullName>Electronic</fullName>
            </value>
            <value>
                <fullName>EFT</fullName>
            </value>
            <value>
                <fullName>No Preference</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>