sfSandBoxCode/force-app/main/default/objects/Electronic_Payment_Request__c/fields/Purchase_Order_Header__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order_Header__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>PO</label>
    <referenceTo>rstk__pohdr__c</referenceTo>
    <relationshipLabel>Electronic Payment Requests (PO)</relationshipLabel>
    <relationshipName>Electronic_Payment_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>