sfSandBoxCode/force-app/main/default/objects/Electronic_Payment_Request__c/fields/Requesting_Company__c.field-meta.xml
<CustomField>
    <fullName>Requesting_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Requesting Company (FFA Config)</description>
    <inlineHelpText>Requesting Company (FFA Config)</inlineHelpText>
    <label>Requesting Company</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Requesting Company Value does not exist or does not match filter criteria.</errorMessage>
        <filterItems>
            <field>FFA_Config_Object__c.isActive__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>FFA_Config_Object__c.Type__c</field>
            <operation>equals</operation>
            <value>company</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>FFA_Config_Object__c</referenceTo>
    <relationshipLabel>Requesting Company</relationshipLabel>
    <relationshipName>Electronic_Payment_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>