sfSandBoxCode/force-app/main/default/objects/Electronic_Payment_Request__c/fields/Requestor_user__c.field-meta.xml
<CustomField>
    <fullName>Requestor_user__c</fullName>
    <formula>Owner:User.FirstName +&quot; &quot;+Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requestor</label>
    <type>Text</type>
</CustomField>