sfSandBoxCode/force-app/main/default/objects/Electronic_Payment_Request__c/fields/RespectiveCompany__c.field-meta.xml
<CustomField>
    <fullName>RespectiveCompany__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Company</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>c2g__codaCompany__c.c2g__City__c</field>
            <operation>equals</operation>
            <value>Nairobi</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>c2g__codaCompany__c</referenceTo>
    <relationshipLabel>Electronic Payment Requests</relationshipLabel>
    <relationshipName>Electronic_Payment_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>