sfSandBoxCode/force-app/main/default/objects/Electronic_Payment_Request__c/fields/RFE_Name_del__c.field-meta.xml
<CustomField>
    <fullName>RFE_Name_del__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RFE Name</label>
    <referenceTo>RFE__c</referenceTo>
    <relationshipLabel>Electronic Payment Requests</relationshipLabel>
    <relationshipName>Electronic_Payment_Requests_del</relationshipName>
    <type>Lookup</type>
</CustomField>