sfSandBoxCode/force-app/main/default/objects/Electronic_Payment_Request__c/fields/Scheduled_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Payment_Date__c</fullName>
    <description>The date when the payment is required</description>
    <label>Actual EPR Date</label>
    <type>Date</type>
</CustomField>