sfSandBoxCode/force-app/main/default/objects/Electronic_Payment_Request__c/fields/Source_Doc_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Source_Doc_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Source Document Opportunity</description>
    <inlineHelpText>Source Document Opportunity</inlineHelpText>
    <label>Source Doc: Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Electronic Payment Requests</relationshipLabel>
    <relationshipName>SourceDocOpp</relationshipName>
    <type>Lookup</type>
</CustomField>