sfSandBoxCode/force-app/main/default/objects/Electronic_Payment_Request__c/fields/Source_Doc_SPR__c.field-meta.xml
<CustomField>
    <fullName>Source_Doc_SPR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Source Doc:SPR</description>
    <inlineHelpText>Source Doc:SPR</inlineHelpText>
    <label>Source Doc:SPR</label>
    <referenceTo>Special_Procurement__c</referenceTo>
    <relationshipLabel>Electronic Payment Requests</relationshipLabel>
    <relationshipName>SourceDocSPR</relationshipName>
    <type>Lookup</type>
</CustomField>