sfSandBoxCode/force-app/main/default/objects/Electronic_Payment_Request__c/fields/Team_Lead_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Team_Lead_Approval_Status__c</fullName>
    <label>Team Lead Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>