sfSandBoxCode/force-app/main/default/objects/Electronic_Payment_Request__c/fields/Transaction_Number__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transaction Number</label>
    <referenceTo>c2g__codaTransaction__c</referenceTo>
    <relationshipLabel>Electronic Payment Requests</relationshipLabel>
    <relationshipName>Electronic_Payment_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>