sfSandBoxCode/force-app/main/default/objects/Electronic_Payment_Request__c/fields/Vendor_and_Payment_Currencies_match__c.field-meta.xml
<CustomField>
    <fullName>Vendor_and_Payment_Currencies_match__c</fullName>
    <description>Value will be true is the vendor currency is the same as the payment currency</description>
    <formula>TEXT(Currency__c)=TEXT(CurrencyIsoCode)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Value will be true is the vendor currency is the same as the payment currency</inlineHelpText>
    <label>Vendor and Payment Currencies match</label>
    <type>Checkbox</type>
</CustomField>