sfSandBoxCode/force-app/main/default/objects/Electronic_Payment_Request__c/fields/Vendor_Company__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Company__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Vendor Company</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Sanergy Vendor, Sanergy Employee Accounts, Sanergy Toilet Sale - FLO, Sanergy Funders, Sanergy Fresh Fit Sales</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Electronic Payment Requests</relationshipLabel>
    <relationshipName>Electronic_Payment_Requests</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>