sfSandBoxCode/force-app/main/default/objects/Electronic_Payment_Request__c/fields/Vendor_Invoice_Actual_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Invoice_Actual_Payment_Date__c</fullName>
    <formula>Vendor_Invoice_Number__r.Actual_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vendor Invoice Actual Payment Date</label>
    <type>Date</type>
</CustomField>