sfSandBoxCode/force-app/main/default/objects/Electronic_Payment_Request__c/fields/Vendor_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Invoice_Number__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Vendor Invoice Name</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>This Vendor Invoice does not belong to the Vendor Company you specified</errorMessage>
        <filterItems>
            <field>$Source.Vendor_Company__c</field>
            <operation>equals</operation>
            <valueField>Vendor_Invoice__c.Vendor__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Vendor_Invoice__c</referenceTo>
    <relationshipLabel>Electronic Payment Requests</relationshipLabel>
    <relationshipName>Electronic_Payment_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>