sfSandBoxCode/force-app/main/default/objects/Electronic_Payment_Request__c/fields/VendorName__c.field-meta.xml
<CustomField>
    <fullName>VendorName__c</fullName>
    <formula>Vendor_Company__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VendorName</label>
    <type>Text</type>
</CustomField>