sfSandBoxCode/force-app/main/default/objects/Electronic_Payment_Request__c/recordTypes/EPR_Finance_Approval.recordType-meta.xml
<RecordType>
    <fullName>EPR_Finance_Approval</fullName>
    <active>true</active>
    <label>EPR - Finance Approval</label>
</RecordType>